<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/sixTeen"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".ManagementHome">
    <!--ManagementHome-->
    <Button
        android:id="@+id/requestbuttonMH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/check_requests"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/checkFeedbackbuttonMH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="@string/check_feedback"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/requestProvidersbutton2MH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="@string/request_providers"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/userbuttonMH"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user" />

    <Button
        android:id="@+id/managerbuttonMH"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Manager" />

    <Button
        android:id="@+id/SPbuttonMH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="Create Service Provider"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/registarationReqsbuttonMH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="@string/registration_requests"
        android:textColor="@android:color/white" />

</LinearLayout>